--- a/tutorials/python/CS231n-Python-NumPy-Tutorial.ipynb
+++ b/tutorials/python/CS231n-Python-NumPy-Tutorial.ipynb
@@ -2485,7 +2485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Left: The original image        | Right: The tinted and resized image           |\n",
+    "| The original image        | The tinted and resized image           |\n",
     "| ------------- |:-------------:|\n",
     "| ![alt-text-1](assets/cat.jpg \"title-1\")      | ![alt-text-2](assets/cat_tinted.jpg \"title-2\") | "
    ]
